--- a/src/styles/review.css
+++ b/src/styles/review.css
@@ -5,4 +5,9 @@
   border-image: initial;
   border-radius: 4px;
   padding: 20px;
+  text-align: left;
+  margin-top: 16px;
+  font-family: Targetica, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  line-height: 1.4285;
+
 }
