--- a/src/styles/review.css
+++ b/src/styles/review.css
@@ -9,5 +9,18 @@
   margin-top: 16px;
   font-family: Targetica, "Helvetica Neue", Helvetica, Arial, sans-serif;
   line-height: 1.4285;
+}
 
+.userLine {
+  font-size: 12px;
+  margin-top: 4px;
+}
+
+.reviewTitle {
+  margin-bottom: 8px;
+  margin-top: 0px;
+}
+
+.stars {
+  display: inline-block;
 }
