--- a/src/styles/review.css
+++ b/src/styles/review.css
@@ -21,6 +21,13 @@
   margin-top: 0px;
 }
 
+.recommendBar {
+  display: flex;
+  flex-direction: row;
+  margin: 0px;
+  font-weight: bold;
+  font-size: 14px;
+}
 .stars {
-  display: inline-block;
+  margin-right: 5px;
 }
