finishing touches complete

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -12,6 +12,8 @@
   border: black;
   border-width: 5px;
   text-align: center;
+  display: flex;
+  flex-direction: column;
 }
 
 .ratingsAndReviews {
@@ -20,7 +22,8 @@
 
 .numberOfReviews {
   font-size: 14px;
-  margin: 0px;
+  margin-top: 0px;
+  margin-bottom: 10px;
 }
 
 .starAverage {
@@ -32,23 +35,30 @@
 .drop-downBar{
   padding: 16px;
   background-color: rgb(247, 247, 247);
+  justify-content: flex-start;
 
 }
 
 /* Style The Dropdown Button */
 .dropbtn {
-  color: black;
-  padding: 16px;
+  background-color : white;
   font-size: 16px;
-  border: none;
+  padding-bottom: 30px;
+  border-color: black;
+  border-width: 1px;
+  border-style: solid;
+  border-image: initial;
+  border-radius: 5px;
   cursor: pointer;
+  min-width: 160px;
+  text-align: left;
+  font-family: Targetica, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  line-height: 1.4285;
+  display: flex;
+  height: 20px;
 }
 
 /* The container <div> - needed to position the dropdown content */
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
 
 /* Dropdown Content (Hidden by Default) */
 .dropdown-content {
@@ -58,6 +68,8 @@
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
+  border-bottom: 5px;
+  border-radius: 5px;
 }
 
 /* Links inside the dropdown */
@@ -67,6 +79,7 @@
   text-decoration: none;
   display: block;
   cursor: pointer;
+
 }
 
 /* Change color of dropdown links on hover */
