Fix pathing error, add compatbility with Blake's component.

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -53,7 +53,7 @@
   min-width: 160px;
   text-align: left;
   font-family: Targetica, "Helvetica Neue", Helvetica, Arial, sans-serif;
-  line-height: 1.4285;
+  line-height: 20px;
   display: flex;
   height: 20px;
 }
